# leaf_note

./: README.md  package.json  pnpm-lock.yaml
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  serve.rs  spider.rs  storage.rs  types.rs
src/components/: Contextmenu.vue  Infobar.vue  Notelist.vue  Statusbar.vue  Subwindow.vue  Toolbar.vue
src/hooks/: useDialog.ts
src/router/: index.ts
src/store/: config.ts  note.ts  todo.ts
src/types/: index.ts
src/views/: Content.vue  Cover.vue  Empty.vue  Setting.vue  Todo.vue
