[package]
name = "leaf_note"
version = "0.1.0"
description = "A simple and lightweight note-taking app"
authors = ["yomiko451"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "clipboard-write-text", "clipboard-read-text", "protocol-asset", "dialog-ask", "dialog-message", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
reqwest = { version = "0.11.23", features = ["json"] }
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
